// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button snapshot 1`] = `
.c0 {
  line-height: 1.2;
  font-size: 5rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 400;
  color: inherit;
  text-transform: uppercase;
}

@media (min-width:600px) {

}

<div>
  <span
    class="c0"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 2`] = `
<div>
  <span
    class="Title-xde5hf-0 bBEOkM"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 3`] = `
<div>
  <span
    class="Title-xde5hf-0 jnSYdk"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 4`] = `
<div>
  <span
    class="Title-xde5hf-0 gAGAUi"
  >
    test
  </span>
</div>
`;
